--- a/pom.xml
+++ b/pom.xml
@@ -274,5 +274,17 @@
 
         </plugins>
     </build>
+    <distributionManagement>
+	  <repository>
+	     <id>deployment</id>
+	     <name>Internal Releases</name>
+	     <url>http://54.197.251.122:8081/nexus/content/repositories/releases/</url>
+	  </repository>
+	  <snapshotRepository>
+	     <id>deployment</id>
+	     <name>Internal Releases</name>
+	     <url>http://54.197.251.122:8081/nexus/content/repositories/snapshots/</url>
+	  </snapshotRepository>
+</distributionManagement>
 
 </project>
